feat: extend customer review details blade with extra fields

--- a/CustomerReviews/CustomerReviews.Web/Localizations/en.customerReviews.json
+++ b/CustomerReviews/CustomerReviews.Web/Localizations/en.customerReviews.json
@@ -10,7 +10,10 @@
         "title": "Customer Review List"
       },
       "review-details": {
-        "isActive": "Is Active"
+        "isActive": "Is Active",
+        "author": "Author",
+        "content": "Content",
+        "title": "'s review"
       }
     },
     "dialogs": {
