feat: add calculated field to Product - AverageRating based on customer reviews rate

--- a/CustomerReviews/CustomerReviews.Web/Localizations/en.customerReviews.json
+++ b/CustomerReviews/CustomerReviews.Web/Localizations/en.customerReviews.json
@@ -24,7 +24,8 @@
     },
     "widgets": {
       "item-detail": {
-        "title": "Customer reviews"
+        "title": "Customer reviews",
+        "rating": "Average rating"
       }
     }
   }
